playing around with html and css

--- a/index.html
+++ b/index.html
@@ -8,10 +8,41 @@
 	</head>
 	<body>
 		<header>
-			
+			<div class= "hero">
+				<h1>Elliott Klavitter</h1>
+			</div>
+			<nav>
+				<ul>
+					<li>
+						<a href= "#">SKILLS</a>
+					</li>
+					<li>
+						<a href= "#">PROJECTS</a>
+					</li>
+					<li>
+						<a href= "#">ABOUT</a>
+					</li>
+				</ul>
+			</nav>
 		</header>
+		
 		<main>
-			
+			<div class= "title">
+				<h2>Web Development.</h2>
+				<h2>UI/UX Design.</h2>
+				<h2>Consulting.</h2>
+			</div>
+			<div class= "skills" background="FirstPoject/src/bubbles.png/">
+				<h3>SKILLS</h3>
+			</div>
+			<div class= "projects">
+				<h3>PROJECTS</h3>
+				<h4> UNDER CONSTRUCTION</h4>
+			</div>
+			<div class= "about">
+				<h3>ABOUT</h3>
+			</div>
 		</main>
+		<footer>contact: eklavitt@gmail.com</footer>
 	</body>
-</html>
+</html> 
