--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<h2>UI/UX Design.</h2>
 				<h2>Consulting.</h2>
 			</div>
-			<div class= "skills" background="FirstPoject/src/bubbles.png/">
+			<div class= "skills">
 				<h3>SKILLS</h3>
 			</div>
 			<div class= "projects">
